# Recipe-app

./: .gitignore  Dockerfile  README.en.md  README.md  docker-compose.yml  pyproject.toml
data/: recipes.db
documents/: DEPLOYMENT.en.md  DEPLOYMENT.md
public/: app.js  index.html  styles.css
server/: defaults.json  index.js  main.py  package.json
server/routers/: changelog.py
