[project]
name = "recipe-app"
version = "0.1.0"
description = "A personal recipe app built with FastAPI, SQLite, and a static HTML frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "openai>=1.108.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]
